--- a/index.html
+++ b/index.html
@@ -13,54 +13,54 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus nostrum delectus maxime, similique animi minima voluptate ea qui perspiciatis modi quam maiores adipisci at aspernatur laborum ipsum libero sequi? Hic! Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, ipsum! Ut odit tempore autem quo magni dicta amet illo exercitationem! Quia minus rem quos nihil nemo ratione asperiores illum magnam.</p>
     </header>
     <main>
-        <section class="box-style">
-            <img class="photos" src="img/male1.png" alt="">
-            <div class="right-to-foto">
-                <h3 class="box-info">MARCO BIANCHI</h3>
-                <div class="box-info">Designer</div>
-                <a class="email" href="#">marcobianchi@team.com</a>
+        <div class="hole-box rectangle">
+            <img class="foto-align foto-size" src="img/male1.png" alt="">
+            <div class="foto-align dimension">
+                <h2 class="text-pdd">MARCO BIANCHI</h2>
+                <div class="text-pdd">Designer</div>
+                <a class="text-pdd email" href="mailto:#">marcobianchi@team.com</a>
             </div>
-        </section>
-        <section class="box-style">
-            <img class="photos" src="img/female1.png" alt="">
-            <div class="right-to-foto">
-                <h3 class="box-info">LAURA ROSSI</h3>
-                <div class="box-info">Front-end Developer</div>
-                <a class="email" href="#">laurarossi@team.com</a>
+        </div>    
+        <div class="hole-box rectangle">
+            <img class="foto-align foto-size" src="img/female1.png" alt="">
+            <div class="foto-align dimension">
+                <h2 class="text-pdd">LAURA ROSSI</h2>
+                <div class="text-pdd">Front-end Developer</div>
+                <a class="text-pdd email" href="mailto:#">laurarossi@team.com</a>
             </div>
-        </section>
-        <section class="box-style">
-            <img class="photos" src="img/male2.png" alt="">
-            <div class="right-to-foto">
-                <h3 class="box-info">GIORGIO VERDI</h3>
-                <div class="box-info">Back-end Developer</div>
-                <a class="email" href="#">giorgioverdi@team.com</a>
+        </div>    
+        <div class="hole-box">
+            <img class="foto-align foto-size" src="img/male2.png" alt="">
+            <div class="foto-align dimension">
+                <h2 class="text-pdd">GIORGIO VERDI</h2>
+                <div class="text-pdd">Back-end Developer</div>
+                <a class="text-pdd email" href="mailto:#">giorgioverdi@team.com</a>
             </div>
-        </section>
-        <section class="box-style">
-            <img class="photos" src="img/female2.png" alt="">
-            <div class="right-to-foto">
-                <h3 class="box-info">MARTA IPSUM</h3>
-                <div class="box-info">SEO Specialist</div>
-                <a class="email" href="#">martaipsum@team.com</a>
+        </div>    
+        <div class="hole-box rectangle">
+            <img class="foto-align foto-size" src="img/female2.png" alt="">
+            <div class="foto-align dimension">
+                <h2 class="text-pdd">MARTA IPSUM</h2>
+                <div class="text-pdd">SEO Specialist</div>
+                <a class="text-pdd email" href="mailto:#">martaipsum@team.com</a>
             </div>
-        </section>
-        <section class="box-style">
-            <img class="photos" src="img/male3.png" alt="">
-            <div class="right-to-foto">
-                <h3 class="box-info">ROBERTO LOREM</h3>
-                <div class="box-info">Project Manager</div>
-                <a class="email" href="#">robertolorem@team.com</a>
+        </div>    
+        <div class="hole-box rectangle">
+            <img class="foto-align foto-size" src="img/male3.png" alt="">
+            <div class="foto-align dimension">
+                <h2 class="text-pdd">ROBERO LOREM</h2>
+                <div class="text-pdd">Project Manager</div>
+                <a class="text-pdd email" href="mailto:#">robertolorem@team.com</a>
             </div>
-        </section>
-        <section class="box-style">
-            <img class="photos" src="img/female3.png" alt="">
-            <div class="right-to-foto">
-                <h3 class="box-info">DANIELA AMET</h3>
-                <div class="box-info">Analyst</div>
-                <a class="email" href="#">danielaamet@team.com</a>
+        </div>    
+        <div class="hole-box">
+            <img class="foto-align foto-size" src="img/female3.png" alt="">
+            <div class="foto-align dimension">
+                <h2 class="text-pdd">DANIELA AMET</h2>
+                <div class="text-pdd">Analyst</div>
+                <a class="text-pdd email" href="mailto:#">danielaamet@team.com</a>
             </div>
-        </section>
+        </div>    
     </main>
 </body>
 </html>
